styles.css
body{
    display: flex;
    margin: 0;
    background-color: rgb(39, 39, 39);
    font-family: "Figtree", sans-serif;
}

button {
    font-family: "Figtree", sans-serif;
}

p1, #resetBtn{
    opacity: .4;
}

#matrix {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    padding: 7px;
    width: 70vw;
    height: 98vh;
    margin-left: auto;
    transition: width 0.7s ease;
}

#notepad.shrink textarea{
    opacity: 0;
}

#matrix.shrink, #notepad.shrink {
    width: 0vw;
    z-index: -1;
}

#matrix.hide {
    opacity: 0;
    z-index: -1;
}

#notepad {
    opacity: 0;
    z-index: -1;
    position: fixed;
    display: flex;
    right: 0;
    width: 70vw;
    height: 98vh;
    transition: ease .3s all, width 0.7s ease;
    margin-left: auto;
}

#notepad textarea {
    resize: none;
    font-size: x-large; 
    background-color: rgb(39, 39, 39);
    border: none;
    color: rgb(197 202 212);
    padding: 50px 30px 30px 45px;
    width: 100%;
    height: 100%;
    overflow-y: auto;
}

.category {
    padding: 10px 30px 35px 60px;
    font-weight: bold;
}

.taskContainer {
    display: flex;
    flex-direction: column;
    gap: 12px;
    overflow-y: scroll;
    transition: transform 0.3s ease;
    will-change: transform, opacity;
    min-width: 250px;
    
}


#doContainer {
    color: #75b1d9;
    overflow: hidden;
    display: flex;
    flex-direction: column;
}
#doTaskContainer .task{
    background-color: rgb(157, 199, 225);
    color: rgb(22 97 146);
}
#doTaskContainer .date{
    background-color: rgb(124, 173, 206);
}
#doTaskContainer .iconBtn{
    color: rgb(22 97 146);
}
#doTaskContainer .completed{
    color: rgb(124, 167, 193);
}



#scheduleContainer {
    /* border: 3px solid rgb(233 167 82); */
    color: rgb(233 167 82);
    /* background-image: url("graphics/cofeepixel.png");
    background-size: 25%;
    background-repeat: no-repeat;
    background-position: center; */
    /* background-color: rgb(242, 226, 195); */
}
#scheduleContainer .task {
    background-color: #eed5af;
    color: #c27400;
}
#scheduleContainer .date {
    background-color: #ebbc77;
}
#scheduleContainer .iconBtn {
    color: #c27400;
}
#scheduleContainer .completed {
    color: rgb(210, 168, 104);
}

#delegateContainer {
    /* border: 3px solid rgb(113 150 135); */
    color: #a3cb74;
    /* background-color: rgb(191, 212, 204); */
}
#delegateContainer .task {
    background-color: #c7dbb0;
    color: #4a7915;
}
#delegateContainer .date {
    background-color: #a8c686;
}
#delegateContainer .iconBtn {
    color: #4a7915;
}
#delegateContainer .completed {
    color: #9cb77c;
}


#deleteContainer {
    /* border: 3px solid rgb(212 96 77); */
    color: #f06f52;
    /* background-color: rgb(234, 201, 196); */
}
#deleteContainer .task {
    background-color: #f0a492;
    color: #9d300f;
}
#deleteContainer .date {
    background-color: #e3967e;
}
#deleteContainer .iconBtn {
    color: #9d300f;
}
#deleteContainer .completed {
    color: #ba6f58;
}

#sideWidget{
    display: flex;
    flex-direction: column;
    background-image: linear-gradient(to right, rgb(197 202 212), rgb(107 136 203));
    flex-grow: 1;
    padding: 0px 30px 35px 30px;
    color: rgb(24, 24, 24);
    /* transition: width 0.7s ease; */
}


.task {
    display: flex;
    align-items: center;
    justify-content:space-between;
    padding: 10px;
    border-radius: 7px;
    transition: transform .5s ease, opacity 0.3s ease;
    min-width: 200px;
    max-width: 400px;
}
.task:hover{
    cursor: pointer;
    transform: translateX(10px);
}

.task .date {
    font-weight: normal;
    font-size: 11px;
    padding: 2px 7px 2px 7px;
    border-radius: 6px;
}
.taskLeft {
    display: flex;
    gap: 15px;
    align-items: center;
}

.task.shrink {
    transform: scale(0.8);
    opacity: 0;
}

.taskText {
    display: flex;
    flex-direction: column;
    margin-right: auto;
    gap:2px;
}


.completed {
    text-decoration: line-through;
}

.doTask button {
    color: rgb(9, 67, 160); 
}

span {
    margin-right: auto;
}

.scheduleTask {
    background-color: rgb(99, 137, 177);
}

.delegateTask {
    background-color: rgb(37, 52, 79);
}

.deleteTask {
    background-color: rgb(99, 32, 36);
}

.iconBtn {
    font-size: 20px;
    background: none;
    border: none;
}

.taskDesc {
    padding:10px;
    background-color: cadetblue;
    
}

.iconBtn:hover {
    cursor: pointer;
}

.taskFront:hover {
    cursor: pointer;
    font-weight: bold;
}

#taskPopup.open, #clearPopup.open, #notepad.open{
    opacity: 1;
    z-index: 999;
}

#taskForm {
    display: flex;
    flex-direction: column;
    width: 425px;
    height: 350px;
    padding: 30px;
    /* position: fixed; */
    background-color: rgb(39, 39, 39);
    border-radius: 15px;
    border: 1px solid black;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    position: fixed;
}
#taskForm h1, #taskForm label, #taskForm select, #taskForm input, #taskForm textarea {
    color: rgb(197 202 212);
    border: none;
}
#taskForm select, #taskForm input, #taskForm textarea {
    background-color: rgb(28, 28, 28);
    padding: 10px;
    border-radius: 5px;
}
#taskPopup select:focus, #taskPopup input:focus, #taskPopup textarea:focus, #notepad textarea:focus {
    outline: none;
}

#taskPopup, #clearPopup{
    opacity: 0;
    z-index: -1;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    position: fixed;
    background-color: rgba(0, 0, 0, 0.45);
    transition: all 0.2s ease;
}

.date {
    font-size: 75%;
}

#clearPopupContents {
    display: flex;
    flex-direction: column;
    gap: 25px;
    background-color: rgb(39, 39, 39);
    position: fixed;
    padding: 30px;
    color: rgb(197 202 212);
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border-radius: 15px;
    border: 1px solid black;
    align-items: center;
}

#clearPopupBtnCon {
    display: flex;
    gap: 25px;
}

#selectContainer {
    display: flex;
    gap: 100px;
}

.selects {
    display: flex;
    flex-direction: column;
    gap: 5px;
}
.selects {
    font-size: small;
}

#inputContainer {
    display: flex;
    flex-direction: column;
    gap: 10px;
}
#inputContainer textarea{
    height: 75px;
    resize: none;
}
#title.blank {
    /* outline-color: rgb(197 202 212);
    outline-width: 10px; */
    outline: 2px solid rgb(107 136 203);
}

.btnContainer {
    display: flex;
    gap: 12px;
}
.btnContainer button {
    /* width: 100px; */
    border-radius: 10px;
    background-color: rgb(73, 107, 187);
    color: rgb(213, 213, 213);
    border: none;
    padding: 5px 50px 5px 50px;
}
.btnContainer button:hover {
    cursor: pointer;
}


#clock {
    padding-top: 30px;
    display: flex;
    align-items:last baseline;
    gap: 12px;
    font-size: 75px;
    font-weight: bold;
}
#timeRight {
    display: flex;
    flex-direction: column;
    font-size: large;
    gap: 8px;
}
#sideWidget button {
    border: none;
    background: none;
    font-size: 20px;
    transition: transform 0.3s ease;
    font-weight: bold;
}
#sideWidget button:hover, #pomoMode .iconBtn:hover{
    cursor: pointer;
    transform: translateX(10px);
}

.top {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 13px;
}

#pomoMode.open {
    opacity: 1;
    z-index: 999;
    transform: translateX(0);
}

#pomoMode {
    opacity: 0;
    z-index: -1;
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    /* background-color: rgb(107 136 203); */
    background-color: none;
    transform: translateX(-70vw);
    transition: all ease 0.7s;
}
#timerContainer {
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    position: fixed;
    display: flex;
    flex-direction: column;
    gap: 60px;
    /* width: 35vw; */
}
#timer {
    color: #2e52a8;
    text-align: center;
    font-size: 150px;
    font-weight: bold;
    display:flex;
}
#timerTop{
    display: flex;
    justify-content: center;
    font-variant-numeric: tabular-nums;
}
.timerAmt {
    display: flex;
    align-items: center;
    justify-items: flex-start;
}
#controlContainer {
    display: flex;
    justify-content: space-between;
    gap: 20px;
    
}
.controlBtn {
    display: flex;
    flex-direction: column;
    gap: 10px;
    border: 2px solid rgb(46, 82, 168);
    color: rgb(19, 59, 150);
    font-weight: bold;
    border-radius: 10px;
    padding: 15px;
}

.controlBtn.selected {
    background-color: rgb(115, 140, 198);
}

.timerControlBtn:hover {
    cursor: pointer;
    transform: translateY(-8px);
}
.timerControlBtn {
    width: 150px;
    transition: all 0.3s ease;
}

.timerControlBtn input {
    color: rgb(19, 59, 150);
    font-size: 25px;
    font-weight: bold;
    background: none;
    border: none;
    outline: none;
    /* max-width: 80px; */
    width: 50px;
    
}
/* .timerControlBtn input:focus {
    /* background-color: rgb(85, 115, 186); */
    /* color: rgb(197 202 212); */
/* }  */


#startStop {
    justify-content: center;
    align-items: center;
    background-color: #2e52a8;
    color: rgb(197 202 212);
    min-width: 60px;
    aspect-ratio: 1 / 1;
    box-shadow: 0px 10px #19387e;
    transform: translateY(-10px);
    transition: ease .2s;
}

#startStop.pause {
    /* background-color: rgb(27, 59, 134);
    border: 2px solid rgb(27, 59, 134); */
    box-shadow: none;
    transform: translateY(0px);
}
.timerInput {
    display: flex;
    gap: 15px;
    justify-content: space-between;
    align-items:center;
}

#pomoMode .iconBtn {
    padding: 20px;
    color: rgb(19, 59, 150);
    transition: transform 0.3s ease;
}

#sideContent {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-between;
    flex: 1;
    transition: all 0.7s ease;
}

#sideContent.stretch {
    opacity: 0;
    z-index: -1;
}

